@@ -779,6 +779,13 @@ typedef struct EncList
 static type1fontinfo makeType1Font()
 {
     type1fontinfo font = (Type1FontInfo *)malloc(sizeof(Type1FontInfo));
+    /*
+     * Initialise font->metrics.KernPairs to NULL
+     * so that we know NOT to free it if we fail to
+     * load this font and have to
+     * bail out and free this type1fontinfo
+     */
+    font->metrics.KernPairs = NULL;
     if (!font)
         warning(_("Failed to allocate Type 1 font info"));
     return font;
